# openscout

./: .env.example  .gitignore  .lattices.json  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  DEV_INSTRUCTIONS.md  README.md  app-server-manager-hooks-DT1ACmd8.js  dewey-feedback.md  dewey.config.ts  install.md  llms-full.txt  llms.txt  main-1fsOo4Rt.js  og-config.json  package.json  send-app-server-request-CSV2uZeE.js  tsconfig.json
.openscout/: project.json
ARCHIVED/: README.md
apps/: README.md
crates/openscout-iroh-bridge/: Cargo.toml  README.md
crates/openscout-iroh-bridge/src/: main.rs
dispatch/: README.md
docs/: ARCHITECTURE.md  README.md  a2a-alignment.md  activity-indexing.md  agent-identity.md  agent-integration-contract.md  agents-and-collaboration.md  architecture.md  ask-scout-implementation.md  ask-scout.md  bridge-hono-trpc-migration.md  chat-model.md  codex-app-server-harness.md  collaboration-workflows-v1.md  concepts.md  context-and-memory.md  current-posture.md  data-ownership.md  fleet-home-launcher-design.md  glossary.md  inspector-bar-audit.md  integrations.md  ios-navigation-concept.md  local-ports.md  local-secrets.md  mcp-api-posture.md  mobile-bridge-health-and-keep-alive.md  native-runtime.md  onboarding-actual-run.md  onboarding-install-recap.md  operator-attention-and-unblock.md  pi-intercom-follow-up-issue.md  protocol-readiness-a2a-acp.md  quickstart.md  ranger.md  releases.md  runtime-sessions.md  scout-agent-delegation.md  scout-comms.md  scoutbot.md  (+7 more)
landing/: README.md  next.config.ts  og-config.json  og-template.html  (+1 more)
(+2010 files in other folders)
