[package]
name = "openscout-iroh-bridge"
version = "0.1.0"
edition = "2024"
publish = false
description = "Iroh sidecar for OpenScout Mesh"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
data-encoding = "2"
iroh = "0.98.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
